fix line breaks in payment product prices

--- a/src/public/public.scss
+++ b/src/public/public.scss
@@ -1,3 +1,5 @@
 .prestation-summary .price {
   text-align: right;
+  white-space: nowrap;
+  vertical-align: bottom;
 }
